spec/e2e/string/unterminated.lit
# error: [unterminated.lit:3] Syntax error: Unterminated string.
"this string has no close quote
